# FoodExpirygenie_S3

./: .env.example  .gitignore  .replit  README.txt  app.py  dependencies.txt  pyproject.toml  replit.md  requirements.txt  setup_instructions.md  user_data.json
.streamlit/: config.toml
attached_assets/: Pasted--Expiry-Calendar-Color-coded-visual-timeline-of-your-food-expiry-dates-streamlit-errors-Streamli-1750781693076_1750781693079.txt  Pasted-Color-coded-visual-timeline-of-your-food-expiry-dates-streamlit-errors-StreamlitDuplicateElementId--1750799060508_1750799060510.txt  Pasted-Color-coded-visual-timeline-of-your-food-expiry-dates-streamlit-errors-StreamlitDuplicateElementKey-1750798679444_1750798679448.txt  Pasted-Color-coded-visual-timeline-of-your-food-expiry-dates-streamlit-errors-StreamlitDuplicateElementKey-1750798972126_1750798972197.txt  Pasted-File-home-runner-workspace-pythonlibs-lib-python3-11-site-packages-streamlit-runtime-scriptrunner-1750799381097_1750799381098.txt  Pasted-I-wany-to-build-a-streamlit-app-in-python-to-track-the-expiry-date-of-food-App-name-ExpiryGenie-1750557370750_1750557370751.txt  Pasted-TypeError-unsupported-operand-type-s-for-int-and-str-Traceback-File-home-runner-worksp-1750781415024_1750781415027.txt
data/: food_items.csv  users.csv
pages/: 1_🏠_Landing.py  2_🔐_Auth.py  3_📱_Dashboard.py  4_📅_Calendar.py  5_📊_Stats.py
utils/: auth.py  csv_storage.py  database.py  food_data.py  gemini_client.py  image_processing.py  s3_storage.py  voice_input.py
utils/__pycache__/: food_data.cpython-313.pyc.2189045546800
