[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.38.45",
    "botocore>=1.38.45",
    "google-genai>=1.21.1",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.0",
    "plotly>=6.1.2",
    "psycopg2-binary>=2.9.10",
    "pyaudio>=0.2.14",
    "pytesseract>=0.3.13",
    "speechrecognition>=3.14.3",
    "streamlit>=1.46.0",
]
